src/scss/blocks/form/_input-select.scss
/*------------------------------------*\
  > Input Select
  Custom input select
\*------------------------------------*/

// Input Select Wrapper
// ---------------------
.input--select-wrapper {
    width: 100%;
    margin-bottom: $size-20;

    @include media-query("desktop") {
        width: auto;
        margin-bottom: 0;
    }
}

// Input Select Toggle
// ---------------------
.input--select {
    position: relative;
}

.input--select__toggle,
.input--select--mobile {
    min-height: $size-40;
    line-height: 1.15;
    padding: 0 0 0 $size-12;
    border: 1px solid $primary-blue-l;
    border-radius: $input-border-radius;
    background-color: #fff;
    width: 100%;
    outline: none;
    appearance: none;
    text-align: left;
    font-weight: $font-weight-title;
    font-family: $font-body;
    font-size: $size-16;
    color: $primary-blue;
    cursor: pointer;
    transition: background-color .1s $easeInOutCubic, color .2s $easeInOutCubic, border-color .2s $easeInOutCubic;

    &:hover {
        background-color: $primary-blue-lll;
    }

    &:focus {
        border-color: $primary-blue-d;
        outline: none;
    }
}

.input--select__toggle-label {
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    width: calc(100% - #{$size-32});
}

.input--select__toggle-icon {
    fill: $primary-blue;
    width: $size-24;
    height: $size-24;
    display: inline-block;
    position: absolute;
    right: $size-10;
    top: 50%;
    transform: translateY(-50%);
}

.input--select__toggle[aria-expanded="true"] {
    background-color: $primary-blue-lll;
}

.input--select__toggle[aria-expanded="true"] .input--select__toggle-icon {
    transform: translateY(-50%) scaleY(-1);
}

.input--select--mobile {
    padding: 0 $size-32 0 $size-14;
    background-size: $size-24 $size-24;
    background-position: top $size-7 right $size-8;
    background-repeat: no-repeat;
}

.input--select--mobile--collapsed {
    background-image: url("#{$public-path}images/icons/icon-arrow-bottom.svg");
}

.input--select--mobile--expanded {
    background-image: url("#{$public-path}images/icons/icon-arrow-top.svg");
    background-color: $primary-blue-lll;
}

// Input Select List
// ---------------------
.input--select__list {
    position: absolute;
    min-width: 100%;
    left: 50%;
    transform: translateX(-50%);
    z-index: z("dropdown");
    margin-top: $size-8;
    padding: $size-4 0;
    border-radius: $size-4;
    border: 1px solid $primary-blue-ll;
    box-shadow: 0 2px 10px rgba(79, 127, 182, .25); // $primary-blue
    background: #fff;
    list-style-type: none;
    overflow-y: auto;
    max-height: 320px;

    &:focus {
        outline: none;
    }
}

// Input Select Drop Up (Open on top of input instead of bottom)
.input--select__list--above {
    bottom: 100%;
    margin-bottom: $size-8;
}

// Input Select Option
.input--select__option {
    @include button-transparent(none);
    font-weight: $font-weight-title;
    font-family: $font-body;
    font-size: $size-14;
    color: $primary-blue-dd;
    line-height: $size-20;
    cursor: pointer;
    width: 100%;
    text-align: left;
    padding: $size-6 $size-12;
    display: block;
    white-space: nowrap;

    &:focus,
    &:hover {
        outline: none;
        background-color: $primary-blue-ll;
        color: $primary-blue-d;
    }

    &.active {
        outline: none;
        background-color: $primary-blue-d;
        color: #fff;
    }
}

.input-group__prepend .input--select  {
    border: 0;
    padding: 0;
    background-color: transparent;
}

.input--select__option-group-title {
    color: $secondary-grey;
    font-family: $font-body;
    font-size: $size-14;
    line-height: $size-20;
    pointer-events: none;
    cursor: default;
    padding-left: $size-12;
    position: relative;

    span {
        position: relative;
        width: 100%;
    }
}

.input--select__option--disabled {
    color: $grey-65;

    &:hover,
    &:focus {
        background: inherit;
        color: $grey-65;
        cursor: default;
    }
}

// Input Select Option-group
// ---------------------
.input--select__option-group {
    padding: 0;
}

.input--select__option-group .input--select__option {
    padding-left: $size-24;
}

// Input Select Mobile
// Native input a little bit stylized
// ---------------------
.input--select--mobile {
    width: 100%;
    outline: 0;

    &:-moz-focusring {
        color: transparent;
        text-shadow: 0 0 0 #000;
    }

    @include media-query("desktop") {
        display: none;
    }
}

.input--select--mobile option {
    font-weight: $font-weight-title;
    font-family: $font-body;
    font-size: $size-14;
    line-height: $size-20;
    padding: $size-4 $size-10;

    &:focus,
    &:hover {
        outline: none;
        background-color: $primary-blue-l;
        color: #fff;
    }

    &.active {
        outline: none;
        background-color: $primary-blue-d;
        color: #fff;
    }

    &,
    &:not(:checked) {
        color: $primary-blue-dd; /* Prevent <option>s from becoming transparent due to the focusing transparent rules */
    }
}

.input--select--mobile optgroup {
    color: $secondary-grey;
    font-size: $size-14;
}

// Input--select--desktop
// Custom input select, hidden on mobile
// ---------------------
.input--select--desktop {
    display: none;

    @include media-query("desktop") {
        display: block;
    }
}

// Input--select--small
// Small input select
.input--select--small.input--select--mobile,
.input--select--small .input--select__toggle {
    min-height: 32px;
    padding-right: $size-36;
    background-size: $size-16 $size-16;
    font-size: $size-14;
    background-position: right $size-12 top 50%;
}

.input--select--small .input--select__toggle-label {
    width: 100%;
    line-height: $size-18;
}

.input--select--small .input--select__toggle-icon {
    right: $size-7;
}

